Describe /fillon endpoint
