# hapi/handlers/fillon.js
@@ -1,0 +1,13 @@
+/**
+ * Operations on /fillon
+ */
+module.exports = {
+	/**
+	 *
+	 * parameters: brut, categorie, taille
+	 * produces: application/json
+	 */
+	get: function calculateFillon(req, reply) {
+		reply().code(501);
+	}
+};
